[package]
name = "partio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
metaheuristics-nature = "8.0.4"
num = "0.4.0"
num-integer = "0.1.45"
petgraph = "0.6.2"
rand = "0.8.5"
statrs = "0.16.0"
