[package]
name = "partior_binary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enabling workspaces breaks the shared library for Nanos6
# [workspace]

[dependencies]
partior = { path = "library" }
permutation_iterator = "0.1.2"
rand = "0.8.5"

[[bin]]
name = "partior_binary"
path = "src/main.rs"
